# Posix-Winsync-Plugin-for-389-directory-server

./: COPYING  INSTALL  Makefile  Makefile.am  Makefile.in  README  ToDo  aclocal.m4  configure  configure.ac  ltmain.sh  posix-group-func.c  posix-group-func.h  posix-group-task.c  posix-winsync-conf.ldif  posix-winsync-config.c  posix-winsync.c  posix-wsp-ident.h
